# SMO-Exlaunch-Base

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
lib/exlaunch/: common.hpp  exlaunch.hpp  types.h
lib/exlaunch/lib/: module.cpp  result.hpp
lib/exlaunch/lib/diag/: assert.cpp  assert.hpp
lib/exlaunch/lib/hook/: base.hpp  replace.hpp  trampoline.hpp
lib/exlaunch/lib/hook/nx64/: hook_impl.cpp  inline_impl.cpp  inline_impl.hpp
lib/exlaunch/lib/init/: init.cpp
lib/exlaunch/lib/log/: logger_mgr.hpp
lib/exlaunch/lib/patch/: patcher_impl.hpp  random_access_patcher.hpp
lib/exlaunch/lib/reloc/: reloc.cpp  reloc.hpp
lib/exlaunch/lib/reloc/table/: lookup.cpp  lookup.hpp  lookup_entry.hpp  table.hpp  table_gen.hpp  table_set.hpp
lib/exlaunch/lib/util/: crc32.hpp  neon.hpp  version.cpp  version.hpp
lib/exlaunch/lib/util/sys/: mem_layout.cpp  mem_layout.hpp
module/: subsdk.json.template  subsdk.specs.template  subsdk9.json.template  subsdk9.ld
src/: loggers.hpp  main.cpp  offsets.hpp  setting.hpp
src/lib/: result.hpp
src/lib/hook/: replace.hpp  trampoline.hpp
src/program/: main.cpp  setting.hpp
